--- a/estudio_1/estudio_1_react.html
+++ b/estudio_1/estudio_1_react.html
@@ -17,7 +17,14 @@
     <div id="content_3"></div>
     <hr>
     <div id="content_4"></div>
-    <script type="text/jsx" src="react/script_react.jsx">
-    </script>
+    <hr>
+    <div id="content_5"></div>
+    <hr>
+    <div id="content_6"></div>
+    <hr>
+    <div id="content_7"></div>
+    <hr>
+
+    <script type="text/jsx" src="react/script_react.jsx"></script>
 </body>
 </html>
