--- a/estudio_1_componentes/estudio_1_react.html
+++ b/estudio_1_componentes/estudio_1_react.html
@@ -10,7 +10,7 @@
     <title>Estudio_1_react</title>
 </head>
 <body>
-    <div id="content_1" style="color:red;"></div>
+    <div id="content_1" ></div>
     <hr>
     <div id="content_2"></div>
     <hr>
@@ -23,6 +23,14 @@
     <div id="content_6"></div>
     <hr>
     <div id="content_7"></div>
+    <hr>
+    <div id="content_8"></div>
+    <hr>
+    <div id="content_9"></div>
+    <hr>
+    <div id="content_10"></div>
+    <hr>
+    <div id="content_11"></div>
     <hr>
 
     <script type="text/jsx" src="react/script_react.jsx"></script>
