--- a/estudio_2_comp_state/react_state.html
+++ b/estudio_2_comp_state/react_state.html
@@ -23,6 +23,11 @@
     <hr>
     <div id="container_count" ></div>
     <hr>
+    <div id="container_entrada" ></div>
+    <hr>
+    <div id="container_entrada_submit" ></div>
+    <hr>
+    
     <script type="text/jsx" src="react/script_react_2.jsx"></script>
 </body>
 </html>
