--- a/estudio_2_comp_state/react_state.html
+++ b/estudio_2_comp_state/react_state.html
@@ -27,6 +27,14 @@
     <hr>
     <div id="container_entrada_submit" ></div>
     <hr>
+    <div id="container_6"></div>
+    <hr> 
+    <div id="container_7"></div>
+    <hr> 
+    <div id="container_8"></div>
+    <hr> 
+    <div id="container_8_1"></div>
+    <hr> 
     
     <script type="text/jsx" src="react/script_react_2.jsx"></script>
 </body>
