--- a/estudio_2_comp_state/react_state.html
+++ b/estudio_2_comp_state/react_state.html
@@ -35,6 +35,22 @@
     <hr> 
     <div id="container_8_1"></div>
     <hr> 
+    <div id="container_8_2"></div>
+    <div id="container_listener"></div>
+    <hr> 
+    <div id="container_8_3"></div>
+    <hr>
+    <div id="container_9"></div>
+    <hr>
+    <div id="container_10"></div>
+    <hr>
+    <div id="container_11"></div>
+    <div id="container_11_1"></div>
+    <div id="container_11_2"></div>
+    <hr>
+    <div id="container_12"></div>
+    <hr>
+    <div id="container_13"></div>
     
     <script type="text/jsx" src="react/script_react_2.jsx"></script>
 </body>
