--- a/estudio_2_comp_state/react_state.html
+++ b/estudio_2_comp_state/react_state.html
@@ -51,6 +51,8 @@
     <div id="container_12"></div>
     <hr>
     <div id="container_13"></div>
+    <hr>
+    <div id="container_14"></div>
     
     <script type="text/jsx" src="react/script_react_2.jsx"></script>
 </body>
